Feature/admin clothing sales (#109)
* fix: enhance readability and add clothingSalesCount

* feature: add ClothingSalesRepository for integrated query

* feature: add productState on Product entity

* feature: add getClothingSalesProductCount

* feature: add weight column

* feature: add update weight

* fix: clothingSalesId -> clothingSalesCount

* fix: change not to use sql_mode